@@ -174,7 +174,6 @@ public:  //BUG: for now everything is public
 
    bool stop_parser_after_head;
    bool repush_after_head;
-   bool repush_after_stylesheet;
 
    size_t CurrTagOfs;
    size_t OldTagOfs, OldTagLine;
